--- a/PALS/project.properties
+++ b/PALS/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-23
-android.library.reference.1=../../../../workspace/google-play-services_lib
+android.library.reference.1=../../../Android/Workspace/google-play-services_lib
