--- a/PALS/bin/AndroidManifest.xml
+++ b/PALS/bin/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:screenOrientation="portrait" >
         </activity>
         <activity
+            android:name=".ListResultActivity"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
             android:name=".MapsActivity"
             android:screenOrientation="portrait" >
         </activity>
