--- a/PALS/AndroidManifest.xml
+++ b/PALS/AndroidManifest.xml
@@ -19,49 +19,65 @@
     
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/logo"
+        android:label=""
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MenuActivity"
             android:screenOrientation="portrait"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:logo="@drawable/icon" >
+            <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".FindATM"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".FindGasStation"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".ListResultActivity"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".MapsActivity"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".Help"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".About"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".AddLocationMapsActivity"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".AddLocationActivity"
+            android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
+            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         
         <meta-data
