--- a/PALS/AndroidManifest.xml
+++ b/PALS/AndroidManifest.xml
@@ -35,49 +35,46 @@
             android:name=".FindATM"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".FindGasStation"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".ListResultActivity"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".MapsActivity"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".Help"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".About"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
+        </activity>
+        <activity
+            android:name=".CategoryAddLocation"
+            android:logo="@drawable/icon"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".AddLocationMapsActivity"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         <activity
             android:name=".AddLocationActivity"
             android:logo="@drawable/icon"
             android:screenOrientation="portrait" >
-            <intent-filter android:label="@string/app_name"></intent-filter>
         </activity>
         
         <meta-data
