--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,7 @@ Thumbs.db
 *.pydevproject
 .project
 *.metadata
-bin/*.txt
-bin/*.xml
-bin/PALS.apk
+bin/R.txt
 bin/dexedLibs/*.jar
 tmp/**
 tmp/**/*
@@ -62,6 +60,7 @@ local.properties
 .loadpath
 project.properties
 .jar
+PALS.apk
 resources.ap_
 classes.dex
 dexedLibs/
