--- a/PALS/AndroidManifest.xml
+++ b/PALS/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:minSdkVersion="17"
         android:targetSdkVersion="23" />
 	
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -20,13 +19,14 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_2"
-        android:label=""
+        android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait"
-            android:logo="@drawable/icon_2" >
-            <intent-filter android:label="@string/app_name">
+            android:logo="@drawable/icon_2"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
